// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render correctly 1`] = `
"<div class=\\"nextui-row nextui-row-fluid\\">row<style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div>"
`;

exports[`Row should work with nested 1`] = `
"<div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><div class=\\"nextui-row nextui-row-fluid\\">row<style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div>"
`;

exports[`Row the children should be aligned correctly 1`] = `
"<div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-end;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: center;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: space-around;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: space-between;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: center;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(0 * 1.25rem / 2);
          margin-right: calc(0 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-end;
          --nextui-row-gap: calc(0 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div></div>"
`;

exports[`Row the children should have the correct spacing 1`] = `
"<div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(1 * 1.25rem / 2);
          margin-right: calc(1 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(1 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(2 * 1.25rem / 2);
          margin-right: calc(2 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(2 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div><div class=\\"nextui-row nextui-row-fluid\\"><div class=\\"nextui-col \\"><style>
        .nextui-col {
          float: left;
          box-sizing: border-box;
          padding-left: calc(var(--nextui-row-gap) / 2);
          padding-right: calc(var(--nextui-row-gap) / 2);
          width: 100%;
          margin-left: 0%;
          ;
        }
      </style></div><style>
        .nextui-row {
          display: flex;
          position: relative;
          box-sizing: border-box;
          flex-wrap: nowrap;
          margin-left: calc(10 * 1.25rem / 2);
          margin-right: calc(10 * 1.25rem / 2);
          justify-content: flex-start;
          align-items: flex-start;
          --nextui-row-gap: calc(10 * 1.25rem);
          ;
        }
        .nextui-row-fluid {
          width: 100%;
        }
      </style></div></div>"
`;
